@startuml

title __CLASS's Class Diagram__\n

  namespace project {
    namespace Class {
      class project.Class.Cennik {
          + DataZmiany : String
          + Gabaryt : String
          + ID : int
          + Kwota : float
          + Limit : int
          + Opis : String
          + Cennik()
          + Cennik()
          {static} + fillPriceList()
          + getDataZmiany()
          + getGabaryt()
          + getID()
          + getKwota()
          + getLimit()
          + getOpis()
          + setDataZmiany()
          + setGabaryt()
          + setID()
          + setKwota()
          + setLimit()
          + setOpis()
      }
    }
  }
  

  namespace project {
    namespace Class {
      class project.Class.Doplata {
          + ID : int
          + KwotaD : Float
          + TypDoplaty : String
          + Doplata()
          {static} + fillTableAdditional()
          + getKwotaD()
          + getTypDoplaty()
          + setKwotaD()
          + setTypDoplaty()
      }
    }
  }
  

  namespace project {
    namespace Class {
      class project.Class.Kurier {
          + id : int
          + ilosc : int
          + imie : String
          + location : String
          + Kurier()
          + Kurier()
          + getId()
          + getIlosc()
          + getImie()
          + getLocation()
          + setId()
          + setIlosc()
          + setImie()
          + setLocation()
      }
    }
  }
  

  namespace project {
    namespace Class {
      class project.Class.Oddzial {
          + id : int
          + miejscowosc : String
          + Oddzial()
          {static} + addAction()
          {static} + fill_table()
          + getId()
          + getMiejscowosc()
          + setId()
          + setMiejscowosc()
      }
    }
  }
  

  namespace project {
    namespace Class {
      class project.Class.Zlecenie {
          {static} + stage : Stage
          {static} + fillCourierTable()
          {static} + fillOrderTable()
          {static} + fill_table()
          {static} + filltableCourier()
          {static} + filltableCurrentOrder()
      }
    }
  }
  

  project.Class.Cennik -up-|> project.Utils.DataUtil
  project.Class.Doplata -up-|> project.Utils.DataUtil
  project.Class.Oddzial -up-|> project.Utils.DataUtil
  project.Class.Zlecenie -up-|> project.Utils.DataUtil


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
